# pyside6-ios

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
doc/: build-tool-reference.md  initial-plan.md  plan.md  porting-cookbook.md  report-qt-company.md
scripts/: build_pyside6_module.sh  build_qtruntime.sh  build_test_app.sh  build_test_qml.sh  globalize_symbols.py  hb_stubs.cpp
src/pyside6_ios/: cli.py  config.py  mainmm.py  moc.py  pbxproj.py  shiboken.py  signing.py  xcodebuild.py
test/test_pyside6/: Info.plist  main.mm  main.qml  pyside6-ios.toml  qtbridge.h
test/test_pyside6/Settings.bundle/: Info.plist  Root.plist
test/test_pyside6/TestPySide6.xcodeproj/: project.pbxproj
test/test_pyside6/myapp/: __init__.py  build_info.py  util.py
test/test_pyside6/native/: appstate.cpp  appstate.h  deviceinfo.h  typesystem_appstate.xml
test/test_pyside6/qml/: AnimationPage.qml  DialogPage.qml  IndicatorPage.qml  InfoPage.qml  InputPage.qml  IosSeparator.qml  IosTextField.qml  ListPage.qml  NavigationPage.qml  SectionCard.qml  SelectionPage.qml  main.qml
test/test_pyside6/scripts/: app.py
test/test_python_qml/: ButtonsPage.qml  IndicatorPage.qml  Info.plist  IosButton.qml  IosSwitch.qml  NavigationPage.qml  main.mm  main.qml  qtbridge.mm
test/test_python_qml/TestPythonQml.xcodeproj/: project.pbxproj
test/test_python_qml/scripts/: app.py
test/test_qml/: Info.plist  main.mm  main.qml
test/test_qtruntime/: Info.plist  main.mm
test/test_widgets/: pyside6-ios.toml
tests/: test_config.py  test_mainmm.py  test_moc.py  test_pbxproj.py
(+8 files in other folders)
