[project]
name = "pyside6-ios"
version = "0.1.0"
description = "Build tool for PySide6 iOS apps"
requires-python = ">=3.11"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
pyside6-ios = "pyside6_ios.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyside6_ios"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
